@@ -1,3 +1,9 @@
+2002-09-15  Elena Zannoni  <ezannoni@redhat.com>
+
+        From Jeff Law <law@redhat.com>
+	* infttrace.c (child_resume): Simplify and rework to avoid
+	TT_PROC_CONTINUE.
+
 2002-09-14  Elena Zannoni  <ezannoni@redhat.com>
  
  	From: Emmanuel Thome'  <thome@lix.polytechnique.fr>
